2A/05_Projet_GL/src/test/deca/syntax/valid/Objet/01_ClassVide.deca
// Description:
//    Programme definir une class vide
// Resultats:
//      Programme correcte
//
// Historique:
//    cree le 15/01/2024
class A{}